@@ -21,10 +21,6 @@
       }
 
       window.requestAnimationFrame(update)
-      
-      // document.addEventListener('scroll', function(x) {
-      //   lax.update(window.scrollY)
-      // }, false)
 
       let w = window.innerWidth
       window.addEventListener("resize", function() {
@@ -32,8 +28,6 @@
           lax.populateElements()
         }
       });
-
-      // lax.update(window.scrollY)
     }
   </script>
 
@@ -212,25 +206,35 @@
       cursor: pointer;
     }
 
+    .github-corner {
+      z-index: 1000;
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      transform: scale(1.2);
+    }
+
   </style>
 </head>
 
 
 <body>
+
   <div id="main">
     <div id="header" class="section">
-      <img src="./img/l.png" style="width: 103pt; margin-left: 26pt; margin-bottom: -4pt;" data-lax-translate-x="0 0, vh 200" data-lax-optimize=true />
-      <img src="./img/a.png" data-lax-translate-x="0 0, vh -200" data-lax-optimize=true />
-      <img src="./img/x.png" data-lax-opacity="0 1, (0.8*vh) 0" />
-      <img src="./img/x.png" style="margin-top: -79pt" data-lax-translate-y="0 0, vh 200" data-lax-opacity="0 1, (0.8*vh) 0" />
-      <img src="./img/x.png" style="margin-top: -79pt" data-lax-translate-y="0 0, vh 400" data-lax-opacity="0 1, (0.8*vh) 0" />
-      <img src="./img/x.png" style="margin-top: -79pt" data-lax-translate-y="0 0, vh 600" data-lax-opacity="0 1, (0.8*vh) 0" />
-      <img src="./img/x.png" style="margin-top: -79pt" data-lax-translate-y="0 0, vh 800" data-lax-opacity="0 1, (0.8*vh) 0" />
-      <img src="./img/x.png" style="margin-top: -79pt" data-lax-translate-y="0 0, vh 1000" data-lax-opacity="0 1, (0.8*vh) 0" />
-      <h2 data-lax-scale="0 1, vh 0.2" data-lax-translate-y="0 0, vh 1200" data-lax-opacity="0 1, (vh*0.5) 0">awesum scroll effects</h2>
+      <img src="./img/l.png" class="lax" style="width: 103pt; margin-left: 26pt; margin-bottom: -4pt;" data-lax-translate-x="0 0, vh 200" data-lax-optimize=true />
+      <img src="./img/a.png" class="lax" data-lax-translate-x="0 0, vh -200" data-lax-optimize=true />
+      <img src="./img/x.png" class="lax" data-lax-opacity="0 1, (0.8*vh) 0" />
+      <img src="./img/x.png" class="lax" style="margin-top: -79pt" data-lax-translate-y="0 0, vh 200" data-lax-opacity="0 1, (0.8*vh) 0" />
+      <img class="lax" src="./img/x.png" style="margin-top: -79pt" data-lax-translate-y="0 0, vh 400" data-lax-opacity="0 1, (0.8*vh) 0" />
+      <img class="lax" src="./img/x.png" style="margin-top: -79pt" data-lax-translate-y="0 0, vh 600" data-lax-opacity="0 1, (0.8*vh) 0" />
+      <img class="lax" src="./img/x.png" style="margin-top: -79pt" data-lax-translate-y="0 0, vh 800" data-lax-opacity="0 1, (0.8*vh) 0" />
+      <img class="lax" src="./img/x.png" style="margin-top: -79pt" data-lax-translate-y="0 0, vh 1000" data-lax-opacity="0 1, (0.8*vh) 0" />
+      <h2 class="lax" data-lax-scale="0 1, vh 0.2" data-lax-translate-y="0 0, vh 1200" data-lax-opacity="0 1, (vh*0.5) 0">awesum scroll effects</h2>
 
-      <h4 data-lax-opacity="0 1, (vh*0.05) 0">scroll down</h4>
-      <i class="fas fa-chevron-down" 
+      <h4 class="lax" data-lax-opacity="0 1, (vh*0.05) 0">scroll down</h4>
+      <i class="lax fas fa-chevron-down" 
         data-lax-opacity="0 1, (vh*0.1) 0" 
         data-lax-translate-y="0 0, 200 100">
       </i>
@@ -239,131 +243,135 @@
 
     <div id="section1" class="section">
       <div class="left">
-        <div class="bubble a"
+        <div class="lax bubble a"
           style="background: #EDD943"
           data-lax-preset="lazy-250"
         ></div>
 
-        <div class="bubble c"
+        <div class="lax bubble c"
           style="background: #ED2471; margin-left: 80pt"
           data-lax-preset="lazy-100"
         ></div>
 
-        <div class="bubble b"
+        <div class="lax bubble b"
           style="background: #35D5E5; margin-left: 160pt"
           data-lax-preset="lazy-300"
         ></div>
 
-        <h3 data-lax-preset="driftRight" data-lax-optimize=true class="chunkyText" style="color: #35D5E5;">oooh!</h3>
+        <h3 data-lax-preset="driftRight" data-lax-optimize=true class="lax chunkyText" style="color: #35D5E5;">oooh!</h3>
       </div>
 
       <div class="right">
-          <div class="bubble a"
+          <div class="lax bubble a"
             style="background: #35D5E5; margin-left: 120pt"
             data-lax-preset="lazy-200"
           ></div>
 
-          <div class="bubble c"
+          <div class="lax bubble c"
             style="background: #EDD943; margin-left: -20pt"
             data-lax-preset="lazy-150"
           ></div>
 
-          <div class="bubble b"
+          <div class="lax bubble b"
             style="background: #ED2471; margin-left: 20pt; margin-top: 200pt"
             data-lax-preset="lazy-350"
           ></div>
-        <h3 data-lax-optimize=true data-lax-preset="driftLeft" class="chunkyText" style="color: #ED2471; margin-top: 200pt;">aaah!</h3>
+        <h3 data-lax-optimize=true data-lax-preset="driftLeft" class="lax chunkyText" style="color: #ED2471; margin-top: 200pt;">aaah!</h3>
       </div>
 
-      <h3 data-lax-preset="crazy zoomInOut" class="crazyText" data-lax-optimize=true>sooo crazy</h3>
+      <h3 data-lax-preset="crazy zoomInOut" class="lax crazyText" data-lax-optimize=true>sooo crazy</h3>
     </div>
 
     <div id="section2" class="section">
-      <div class="blockContainer" data-lax-preset="leftToRight-1.1 fadeInOut">
-        <div class="block"
+      <div class="lax blockContainer" data-lax-preset="leftToRight-1.1 fadeInOut">
+        <div class="lax block"
           style="background: #35D5E5;"
           data-lax-preset="spin"
         ></div>
       </div>
 
-      <div class="blockContainer" data-lax-preset="leftToRight-1.2 fadeInOut">
-        <div class="block"
+      <div class="lax blockContainer" data-lax-preset="leftToRight-1.2 fadeInOut">
+        <div class="lax block"
           style="background: #EDD943; margin-top: -50pt; margin-left: -50pt; width: 40pt; height: 40pt;"
           data-lax-preset="spinRev-500"
         ></div>
       </div>
 
-      <div class="blockContainer" data-lax-preset="leftToRight-1.4 fadeInOut">
-        <div class="block"
+      <div class="lax blockContainer" data-lax-preset="leftToRight-1.4 fadeInOut">
+        <div class="lax block"
           style="background: #ED2471; margin-top: -90pt; margin-left: -0pt;"
           data-lax-preset="spin-500"
         ></div>
       </div>
 
-      <div class="blockContainer" data-lax-preset="leftToRight-1.5 fadeInOut">
-        <div class="block"
+      <div class="lax blockContainer" data-lax-preset="leftToRight-1.5 fadeInOut">
+        <div class="lax block"
           style="background: #EDD943; margin-top: 70pt; margin-left: -150pt; width: 40pt; height: 40pt;"
           data-lax-preset="spinRev-500"
         ></div>
       </div>
 
-      <div class="blockContainer" data-lax-preset="leftToRight-1.3 fadeInOut">
-        <div class="block"
+      <div class="lax blockContainer" data-lax-preset="leftToRight-1.3 fadeInOut">
+        <div class="lax block"
           style="background: #EDD943; margin-top: 100pt; margin-left: -60pt; width: 25pt; height: 25pt;"
           data-lax-preset="spin-500"
         ></div>
       </div>
 
-      <div class="blockContainer" data-lax-preset="leftToRight-1.05 fadeInOut">
-        <div class="block"
+      <div class="lax blockContainer" data-lax-preset="leftToRight-1.05 fadeInOut">
+        <div class="lax block"
           style="background: #ED2471; margin-top: -30pt; margin-left: -70pt;"
           data-lax-preset="spin"
         ></div>
       </div>
 
-      <h3 data-lax-preset="leftToRight-0.8 speedy" data-lax-optimize=true class="chunkyText" style="
+      <h3 data-lax-preset="leftToRight-0.8 speedy" data-lax-optimize=true class="lax chunkyText" style="
         color: #white; position: absolute; margin-top: -20pt; margin-left: -100pt">
         wheee!
       </h3>
 
-      <div class="blockContainer" data-lax-preset="leftToRight-1.15 fadeInOut">
-        <div class="block"
+      <div class="lax blockContainer" data-lax-preset="leftToRight-1.15 fadeInOut">
+        <div class="lax block"
           style="background: #35D5E5; margin-top: -70pt; margin-left: -20pt; width: 40pt; height: 40pt;"
           data-lax-preset="spinRev-500"
         ></div>
       </div>
 
-      <div class="blockContainer" data-lax-preset="leftToRight-1.45 fadeInOut">
-        <div class="block"
+      <div class="lax blockContainer" data-lax-preset="leftToRight-1.45 fadeInOut">
+        <div class="lax block"
           style="background: #ED2471; margin-top: -50pt; margin-left: -50pt; width: 25pt; height: 25pt;"
           data-lax-preset="spin-500"
         ></div>
       </div>
 
-      <div class="blockContainer" data-lax-preset="leftToRight-1.5 fadeInOut">
-        <div class="block"
+      <div class="lax blockContainer" data-lax-preset="leftToRight-1.5 fadeInOut">
+        <div class="lax block"
           style="background: #35D5E5; margin-top: 30pt; margin-left: -20pt;"
           data-lax-preset="spinRev-500"
         ></div>
       </div>
 
-      <div class="blockContainer" data-lax-preset="leftToRight-1.25 fadeInOut">
-        <div class="block"
+      <div class="lax blockContainer" data-lax-preset="leftToRight-1.25 fadeInOut">
+        <div class="lax block"
           style="background: #ED2471; margin-top: 80pt; margin-left: -10pt;"
           data-lax-preset="spin-500"
         ></div>
       </div>
     </div>
 
-    <div id="section3" class="section">
-      <p data-lax-preset="linger" data-lax-optimize=true>
+    <div id="section3" class="lax section">
+      <p class="lax" data-lax-preset="linger" data-lax-optimize=true>
         Harness the power of scrolling and make your websites come alive!
       </p>
-      <a class="button" data-lax-preset="linger" data-lax-optimize=true data-lax-bg-pos-x="0 0, 3000 1000" href="https://github.com/alexfoxy/laxxx">
+      <a class="lax button" data-lax-preset="linger" data-lax-optimize=true data-lax-bg-pos-x="0 0, 3000 1000" href="https://github.com/alexfoxy/laxxx">
         Get lax.js
       </a>
     </div>
 
+
+
   </div>
+
+  <a href="https://github.com/alexfoxy/laxxx" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#fff; color:#151513; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 
 </body>
