@@ -80,9 +80,9 @@
       <img src="./img/a.png" 
         class="lax"
         data-lax-scale="0 1, vh 5"
-        data-lax-scale--s="0 1, vh 1"
-        data-lax-preset--s="fadeInOut"
-        data-lax-scale--xs="0 1, vh 0"
+        data-lax-scale_s="0 1, vh 1"
+        data-lax-preset_s="fadeInOut"
+        data-lax-scale_xs="0 1, vh 0"
         />
     </div>
   </div>
